--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,20 +10,20 @@ on:
 
 jobs:
   test:
+    name: testing-job
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Install Bun
-      run: |
-        curl -fsSL https://bun.sh/install | bash
-        export BUN_INSTALL="$HOME/.bun"
-        export PATH="$BUN_INSTALL/bin:$PATH"
+    - uses: actions/checkout@v4
+    - uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: 1.1.26
 
     - name: Install dependencies
       run: bun install
 
     - name: Run tests
       run: bun run test
+
+
+# https://bun.sh/guides/runtime/cicd
